# lackpy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  qm-default.json  qm-phi4.json  qm-smollm2.json  run-qm-test.sh
.github/workflows/: ci.yml
.lackpy/: config.toml
.lackpy/kits/: pluckit-query.kit  pluckit.kit
.riggs/: config.toml  store.duckdb
docs/: getting-started.md  index.md  tutorial.md
docs/concepts/: architecture.md  inference.md  interpreters.md  kits.md  language-spec.md  policy-layer.md
docs/css/: extra.css
docs/extending/: custom-rules.md  inference-providers.md  langchain.md  policy-sources.md  tool-providers.md
docs/reference/: api.md  cli.md
docs/tools/: edit_file.md  find_files.md  read_file.md  write_file.md
scripts/: pluckit-model-compare.py  pluckit-quartermaster.py  run-qm-tests.sh
scripts/prompt_eval/: __init__.py  advisor.py  analyze.py  cohort.py  eval_kit.py  harness.py  intents.py  intents_ast_select.py  intents_plucker.py  intents_pss.py  intents_python.py  phase1a_qualifier.py  phase1b_grid.py  phase2_refinement.py  prompts.py  query.py  report.py  runner.py  scoring.py  trial.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/getting-started/: index.html
site/search/: search_index.json
site/tutorial/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_correction_integration.py  test_ctl.py  test_distill.py  test_integration.py  test_kibitzer_integration.py  test_lackey_integration.py  test_lackey_service.py  test_mcp_cli.py  test_mcp_tools.py  test_pluckit_kit.py  test_service.py
(+189 files in other folders)
