[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lackpy"
version = "0.5.1"
description = "Python that lacks most of Python. Restricted program generation and execution for tool composition."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
sandbox = ["nsjail-python"]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp[cli]"]
fledgling = ["fledgling"]
blq = ["blq-cli"]
kibitzer = ["kibitzer>=0.3"]
full = ["lackpy[ollama,sandbox,anthropic,mcp,fledgling,blq,kibitzer]"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.urls]
Documentation = "https://lackpy.readthedocs.io"
Repository = "https://github.com/teague/lackpy"

[project.scripts]
lackpy = "lackpy.cli:main"
lackpyctl = "lackpy.ctl:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lackpy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "ollama: requires a running Ollama instance",
    "slow: marks tests as slow (deselect with -m 'not slow')",
]
